--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,12 @@
             <groupId>com.sparkjava</groupId>
             <artifactId>spark-template-thymeleaf</artifactId>
             <version>2.3</version>
-        </dependency>        
+        </dependency>   
+        <dependency>
+  <groupId>org.postgresql</groupId>
+  <artifactId>postgresql</artifactId>
+  <version>42.2.1</version>
+</dependency>     
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
